Book - basic API
