# app/api/entities/author_base.rb
@@ -1,12 +1,10 @@
 # frozen_string_literal: true
 
 module Entities
-  class Author < Base
+  class AuthorBase < Base
     expose :id
     expose :first_name
     expose :last_name
     expose :genre
-
-    expose :books, using: Entities::Book, as: :books
   end
 end
